Add isShowcase property to car
