# src/modules/cars/useCases/createCar/CreateCarController.ts
@@ -15,7 +15,8 @@ class CreateCarController {
       category,
       mileage,
       unavailableDates,
-      photoUrl,
+      photo,
+      isShowcase,
     } = request.body;
 
     const createCarUseCase = container.resolve(CreateCarUseCase);
@@ -30,7 +31,8 @@ class CreateCarController {
       category,
       mileage,
       unavailableDates,
-      photoUrl,
+      photo,
+      isShowcase,
     });
 
     return response.status(200).json(car);
